// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text> renders 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  numberOfLines={undefined}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
      },
      false,
      false,
      false,
      false,
      Object {
        "fontSize": 16,
        "lineHeight": 20.8,
      },
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      Object {},
    ]
  }
/>
`;

exports[`<Text> when {accent} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  numberOfLines={undefined}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
      },
      false,
      false,
      false,
      false,
      Object {
        "fontSize": 16,
        "lineHeight": 20.8,
      },
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      Object {
        "color": "#f69a37",
      },
      Object {},
    ]
  }
>
  Hello World
</Text>
`;

exports[`<Text> when {bold} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  numberOfLines={undefined}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
      },
      false,
      false,
      Object {
        "fontWeight": "bold",
      },
      false,
      Object {
        "fontSize": 16,
        "lineHeight": 20.8,
      },
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      Object {},
    ]
  }
>
  Hello World
</Text>
`;

exports[`<Text> when {color} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  numberOfLines={undefined}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
      },
      false,
      false,
      false,
      false,
      Object {
        "fontSize": 16,
        "lineHeight": 20.8,
      },
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      Object {
        "color": "#ef5160",
      },
    ]
  }
>
  Hello World
</Text>
`;

exports[`<Text> when {italic} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  numberOfLines={undefined}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
      },
      false,
      false,
      false,
      Object {
        "fontStyle": "italic",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 20.8,
      },
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      Object {},
    ]
  }
>
  Hello World
</Text>
`;

exports[`<Text> when {large} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  numberOfLines={undefined}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
      },
      false,
      false,
      false,
      false,
      Object {
        "fontSize": 16,
        "lineHeight": 20.8,
      },
      false,
      false,
      Object {
        "fontSize": 20,
        "lineHeight": 26,
      },
      false,
      false,
      false,
      false,
      false,
      Object {},
    ]
  }
>
  Hello World
</Text>
`;

exports[`<Text> when {lighten} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  numberOfLines={undefined}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
      },
      false,
      false,
      false,
      false,
      Object {
        "fontSize": 16,
        "lineHeight": 20.8,
      },
      false,
      false,
      false,
      false,
      false,
      Object {
        "color": "#9b9b9b",
      },
      false,
      false,
      Object {},
    ]
  }
>
  Hello World
</Text>
`;

exports[`<Text> when {lighter} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  numberOfLines={undefined}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
      },
      Object {
        "fontWeight": "300",
      },
      false,
      false,
      false,
      Object {
        "fontSize": 16,
        "lineHeight": 20.8,
      },
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      Object {},
    ]
  }
>
  Hello World
</Text>
`;

exports[`<Text> when {numberOfLines} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  numberOfLines={2}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
      },
      false,
      false,
      false,
      false,
      Object {
        "fontSize": 16,
        "lineHeight": 20.8,
      },
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      Object {},
    ]
  }
>
  Hello World
</Text>
`;

exports[`<Text> when {primary} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  numberOfLines={undefined}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
      },
      false,
      false,
      false,
      false,
      Object {
        "fontSize": 16,
        "lineHeight": 20.8,
      },
      false,
      false,
      false,
      false,
      false,
      false,
      Object {
        "color": "#10c0bc",
      },
      false,
      Object {},
    ]
  }
>
  Hello World
</Text>
`;

exports[`<Text> when {semibold} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  numberOfLines={undefined}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
      },
      false,
      Object {
        "fontWeight": "600",
      },
      false,
      false,
      Object {
        "fontSize": 16,
        "lineHeight": 20.8,
      },
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      Object {},
    ]
  }
>
  Hello World
</Text>
`;

exports[`<Text> when {small} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  numberOfLines={undefined}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
      },
      false,
      false,
      false,
      false,
      Object {
        "fontSize": 16,
        "lineHeight": 20.8,
      },
      false,
      Object {
        "fontSize": 14,
        "lineHeight": 16.8,
      },
      false,
      false,
      false,
      false,
      false,
      false,
      Object {},
    ]
  }
>
  Hello World
</Text>
`;

exports[`<Text> when {style} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  numberOfLines={undefined}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
      },
      false,
      false,
      false,
      false,
      Object {
        "fontSize": 16,
        "lineHeight": 20.8,
      },
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      Object {
        "color": "orange",
        "fontSize": 20,
      },
    ]
  }
>
  Hello World
</Text>
`;

exports[`<Text> when {tiny} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  numberOfLines={undefined}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
      },
      false,
      false,
      false,
      false,
      Object {
        "fontSize": 16,
        "lineHeight": 20.8,
      },
      Object {
        "fontSize": 12,
        "lineHeight": 14.399999999999999,
      },
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      Object {},
    ]
  }
>
  Hello World
</Text>
`;

exports[`<Text> when {title} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  numberOfLines={undefined}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
      },
      false,
      false,
      false,
      false,
      Object {
        "fontSize": 16,
        "lineHeight": 20.8,
      },
      false,
      false,
      false,
      false,
      Object {
        "fontSize": 30,
        "lineHeight": 39,
      },
      false,
      false,
      false,
      Object {},
    ]
  }
>
  Hello World
</Text>
`;
